# rust-arithmetic-mode

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  tests.rs
tests/: test.rs
